--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <h1>Search for weather</h1>
 
-<form action='/'>
+<form action='/' method='POST'>
     <input type="text" name="location">
     <button type="submit">Search</button>
 </form>
